# GPS-client

./: CMakeLists.txt  GPS_Client.fzz  GPS_Client_PICO.fzz  GPS_Client_RP2030_Zero.fzz  GPS_Client_RP2040_Zero.fzz  README.md
inc/: GPS_Client.h  Nokia5110.h  ST7567_FB.h  ST7567_font.h  TinyGPSPlus.h  WS2812.hpp  config.h  images.h
parts/: GY-NEO6MV2.fzpz  Nokia 5110 LCD basado en PCD8544.fzpz  Raspberry Pi Pico.fzpz  Waveshare rp2040-zero tht.fzpz
src/: GPS_Client.cpp  Nokia5110.c  ST7567_FB.cpp  TinyGPSPlus.cpp  WS2812.cpp
supplimentary/: GPS_Case_Base.scad  GPS_Case_Base.stl  GPS_Case_Base2.scad  GPS_Case_Top.scad  GPS_Case_Top.stl  GPS_Case_Top2.scad  GPS_Case_Top_OPEN_SMART_1.8in.scad
